Issue #445 - Avoid body showing bars on Firefox

--- a/css/popup.scss
+++ b/css/popup.scss
@@ -47,6 +47,11 @@ h2
   margin: 0;
 }
 
+body
+{
+  overflow-x: hidden;
+}
+
 /*
   explicitly disable Issue Reporter in EdgeHTML due bug
   https://issues.adblockplus.org/ticket/7175
